Fix overflow issues in chat and add simple footer

--- a/client/src/Lobby/lobby.scss
+++ b/client/src/Lobby/lobby.scss
@@ -49,3 +49,17 @@
     display: block;
   }
 }
+
+.lobby-title {
+  color: white;
+  font-size: 2em;
+}
+
+#lobby-footer {
+  margin: 0.5em;
+  a {
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+  }
+}
