--- a/client/src/Whiteboard/whiteboard.scss
+++ b/client/src/Whiteboard/whiteboard.scss
@@ -25,6 +25,7 @@
   margin-right: 1rem;
   height: 1.5rem;
   width: 1.5rem;
+  color: black;
   border-radius: 50%;
 }
 
